--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>My objective is to make the world a little better than I found it! :)</p>
     <hr />
     <h2>Hi! I'm Steven!</h2>
-    <img src="../assets/images/Steven Headshot.jpeg" height="200" alt="A picture of Steven Alexander"/>
+    <img src="./assets/images/Steven Headshot.jpeg" height="200" alt="A picture of Steven Alexander"/>
     <p>I am currently a highschooler at Columbia High School in Maplewood New Jersey and I have a huge interest in the Law! However, I am interested in learning to code, so here I am! </p>
 
     <h2>Education:</h2>
